--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta charset="UTF-8">
 
 <!--The following line of code displays the page title on a browser tab -->
-<title>Site Title | Home</title>
+<title>Collector's Edition | Dylan Nguyen</title>
 
 <!--link tags are for linking to external files, in this case your CSS stylesheet-->
 <link href="style.css" rel="stylesheet" type="text/css">
